content/static: fix jump to dialog positioning
The jump to dialog stopped rendering as expected
in FireFox and Safari. Adjusts position and styles
so the dialog elements appear above the main content
on the page.

Fixes golang/go#44077

Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/290191
Trust: Jamal Carvalho <jamal@golang.org>
Run-TryBot: Jamal Carvalho <jamal@golang.org>
TryBot-Result: kokoro <noreply+kokoro@google.com>

--- a/content/static/css/stylesheet.css
+++ b/content/static/css/stylesheet.css
@@ -1580,6 +1580,8 @@ table.Directories {
   border: 0.0625rem solid rgba(0, 0, 0, 0.2);
   border-radius: 6px;
   box-shadow: 0 0.3125rem 0.9375rem rgba(0, 0, 0, 0.5);
+  top: 50%;
+  transform: translate(0, -50%);
 }
 .Dialog-title {
   font-size: 1.125rem;
